--- a/editor.css
+++ b/editor.css
@@ -11,7 +11,7 @@
 }
 
 /*Main toolbar*/
-.toolbar {
+.editor-toolbar {
     border: 1px solid #ccc;
     padding: 10px;
     background: #f1f1f1;
@@ -20,20 +20,20 @@
 }
 
 /*Container of the Editing and Code Vies areas*/
-.workspace {
+.editor-workspace {
     flex: 1;
     display: flex;
     flex-direction: column;
 }
 
-.workspace .textview {
+.editor-workspace .textview {
     flex: 1;
     padding: 10px;
     border: 1px solid #ccc;
     background: #f9f9f9;
 }
 
-.workspace .codeview {
+.editor-workspace .codeview {
     flex: 1;
     padding: 10px;
     border: 1px solid #ccc;
